config.yml url changed to eguneys.com

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://eguneys.github.io
+url: http://www.eguneys.com
 title: Fullstack Development w/ Javascript
 subtitle: A blog about javascript fullstack development.
 author: Emre Guneyler
