tr language support added

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: A blog about javascript fullstack development.
 author: Emre Guneyler
 simple_search: https://www.google.com/search
 description: Blog about javascript, nodejs, emberjs, backbone, requirejs, yeoman, phaser, web development, game development, and anything that interests me about software.
-background: pingtech-bg.jpg
+background: colorflags-bg.jpg
 
 # Language i18n
 
