--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ background: colorflags-bg.jpg
 
 # Language i18n
 
-gems: ['jekyll-multiple-languages']
+plugins: ['jekyll-multiple-languages']
 
 languages: ["en", "tr"]
 
@@ -52,7 +52,7 @@ root: /
 permalink: /blog/:year/:month/:day/:title/
 source: source
 destination: public
-plugins: plugins
+plugins_dir: plugins
 code_dir: downloads/code
 category_dir: blog/categories
 markdown: rdiscount
